--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -67,13 +67,13 @@
                   }
                 }]]">
       <li :slot="left" class="nav-item">
-        <a class="nav-link" aria-current="page" href="/">Home</a>
+        <a class="nav-link" href="/">Home</a>
       </li>
       <li :slot="left" class="nav-item">
         <a :class-nav-link :class-active="[[docurl === 'quick-start']]" href="/docs/quick-start">Quick Start</a>
       </li>
 
-      <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'Topics')]]"/>
+      <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'Concepts')]]"/>
       <!-- <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'How-to')]]"/> -->
       <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'Reference')]]"/>
 
