docs navbar menu

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -42,10 +42,10 @@
         <a class="nav-link active" aria-current="page" href="/">Home</a>
       </li>
       <li :slot="left" class="nav-item">
-        <a class="nav-link" target="docs" href="/docs/quick-start">Quick Start</a>
+        <a class="nav-link" href="/docs/quick-start">Quick Start</a>
       </li>
       <li :slot="left" class="nav-item">
-        <a class="nav-link" target="docs" href="/docs/concepts/overview">Docs</a>
+        <a class="nav-link" href="/docs/concepts/overview">Docs</a>
       </li>
       <a :slot="right" href="https://github.com/trillojs/trillo" target="Github" aria-label="Github Repository">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
