--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -108,7 +108,7 @@
           </div>
 
           <div class="col main">
-            <marked-js :source="[[docsData.getValue(docurl)]]"/>
+            <marked-js :data="[[docsData.content]]" :source="[[docsData.getValue(docurl, data)]]"/>
           </div>
 
         </div>
