--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -25,8 +25,7 @@
 
     .nav-link {
       color: #000 !important;
-      padding: .2rem 0;
-      border-top: 4px solid transparent;
+      padding: 7px 0 3px 0;
       border-bottom: 4px solid transparent;
     }
     .nav-link:hover {
