updated homepage links to docs

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -90,7 +90,7 @@
               </p>
               <p>
                 Trillo is a groundbreaking alternative&nbsp;which
-                <a target="Trillo Docs" href="https://docs.trillojs.dev/en/overview">strives&nbsp;for&nbsp;simplicity</a>.
+                <a href="/docs/concepts/overview">strives&nbsp;for&nbsp;simplicity</a>.
               </p>
             </div>
             </div>
@@ -107,8 +107,8 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <p>
-                    You can declare <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reactivity#logic-values">logic values</a> and
-                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reactivity#reactive-expressions">reactive expressions</a>
+                    You can declare <a href="/docs/concepts/reactivity#logic-values">logic values</a> and
+                    <a href="/docs/concepts/reactivity#reactive-expressions">reactive expressions</a>
                     directly in HTML, using
                     <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
                     <code style="text-wrap: nowrap;">[&#8288;[...]]</code> blocks.
@@ -141,8 +141,8 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <p>
-                    Page logic <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/indexability#server">starts in the server</a>, to generate content-ready pages,
-                    and <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/indexability#client">continues in the client</a>, to support user interaction.
+                    Page logic <a href="/docs/concepts/indexability#server">starts in the server</a>, to generate content-ready pages,
+                    and <a href="/docs/concepts/indexability#client">continues in the client</a>, to support user interaction.
                   </p>
                 </li>
                 <li class="list-group-item code"><div>
@@ -180,7 +180,7 @@
                 <li class="list-group-item">
                   <p>
                     With <code style="text-wrap: nowrap;">&lt;:define></code> you can turn blocks of markup into parametric
-                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reusability#custom-tags">custom tags</a>,
+                    <a href="/docs/concepts/reusability#custom-tags">custom tags</a>,
                     ready to be reused anywhere in your code.
                   </p>
                 </li>
@@ -220,9 +220,9 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <p>
-                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reusability#custom-tags">Custom tags</a> can be promoted to
-                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/kits#components">components</a> and
-                    collected in <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/kits#kits">kits</a>,
+                    <a href="/docs/concepts/reusability#custom-tags">Custom tags</a> can be promoted to
+                    <a href="/docs/concepts/kits#components">components</a> and
+                    collected in <a href="/docs/concepts/kits#kits">kits</a>,
                     making them reusable across projects.
                   </p>
                 </li>
