removed meta theme-color

--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Isomorphic reactive web framework and server for Node.js and the browser">
     <meta name="keywords" content="node node.js reactive isomorhpic web framework frontend">
-    <meta name="theme-color" content="[[page_headerBg]]"/>
+    <!--- <meta name="theme-color" content="[[page_headerBg]]"/> -->
     <meta name="color-scheme" content="light dark">
     <title>[[title]]</title>
     <link rel="icon" href="/favicon.svg">
