removed meta theme-color

--- a/docroot/docs-parts/docs.htm
+++ b/docroot/docs-parts/docs.htm
@@ -6,6 +6,10 @@
     color: rgb(59, 69, 78);
   }
 
+  .app-body.docs {
+    padding-bottom: 0;
+  }
+
   input[type='search'] {
     font-size: 90%;
   }
