--- a/docroot/parts/dark.htm
+++ b/docroot/parts/dark.htm
@@ -1,5 +1,6 @@
 <lib
-:dark_pageBg="#222"
+:dark_pageBg="#000"
+:dark_appBodyBg="#222"
 :dark_pageFg="#eee"
 :dark_leadBg="#2a2a2a"
 :dark_leadFg="#fff"
@@ -17,6 +18,9 @@
     body {
       background-color: [[dark_pageBg]];
       color: [[dark_pageFg]];
+    }
+    .app-body {
+      background-color: [[dark_appBodyBg]];
     }
     a, .app-lead a {
       color: [[dark_A]];
