--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -3,9 +3,12 @@
      :footer_bg="#fff">
   <style data-name="page">
     body {
-      background-color: #FBFCFD;
+      background-color: #fff;
       color: #111;
       letter-spacing: .25px;
+    }
+    .app-body {
+      background-color: #FBFCFD;
     }
     a {
       /* color: #D76448; */
