--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -6,7 +6,10 @@
       color: rgba(0,0,0,.7);
       padding: 3em 1em;
       border-top: 1px solid #e6e6e6;
-      margin-top: 1em;
+      /* margin-top: 1em; */
+    }
+    .app-body {
+      padding-bottom: 1em;
     }
     /* .app-footer a {
       color: #f89d66
@@ -17,8 +20,11 @@
       }
     }
     @media only screen and (min-width: 576px) {
-      .app-footer {
+      /* .app-footer {
         margin-top: 1.5em;
+      } */
+      .app-body {
+        padding-bottom: 1.5em;
       }
     }
     @media (prefers-color-scheme: dark) {
