--- a/docroot/parts/pagination.htm
+++ b/docroot/parts/pagination.htm
@@ -2,12 +2,12 @@
 
 <style>
   .app-pagination {
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
     margin-top: .5rem;
     margin-bottom: 1rem;
   }
   .app-pagination > .row {
-    /* max-width: 500px; */
-    /* margin-bottom: 1.5em; */
     justify-content: center;
   }
   .app-pagination-item .wrapper {
@@ -58,7 +58,7 @@
 </:define>
 
 <:define tag="app-pagination-item" class="col-6 app-pagination-item" :type="" :text="" :link="">
-  <a href="[[link]]" class="wrapper">
+  <a href="[[link]]" class="wrapper" :hidden="[[!text]]">
     <div class="box [[type]]">
       <div class="title" :hidden="[[!type]]">[[type === 'prev' ? 'Previous' : 'Next']]</div>
       [[text]]
