--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -14,6 +14,7 @@
       transition: padding .1s;
     }
     .app-hero h1 {
+      font-size: 2rem;
       font-weight: 700;
       margin: 0rem 0 .66em 0;
     }
@@ -28,6 +29,14 @@
     .app-hero > .prompt {
       display: inline-block;
       margin-top: .33em;
+    }
+    .app-hero > .badges {
+      display: block;
+      margin-top: 1.25em;
+    }
+    .app-hero > .badges > img {
+      height: 20px;
+      min-width: 75px;
     }
     .app-hero code {
       display: flex;
