--- a/docroot/index.html
+++ b/docroot/index.html
@@ -73,7 +73,15 @@
             npm i trillo
           </code>
         </div>
-      </app-hero>
+        <div class="badges">
+          <a target="Github" href="https://github.com/trillojs/trillo/releases"><img alt="version" src="https://img.shields.io/github/package-json/v/trillojs/trillo?style=flat-square"/></a>
+          <a target="Github" href="https://github.com/trillojs/trillo/blob/main/LICENSE"><img alt="license" src="https://img.shields.io/github/license/trillojs/trillo?style=flat-square"/></a>
+          <a target="Github" href="https://github.com/trillojs/trillo/actions/workflows/codeql.yml"><img alt="codeql" src="https://img.shields.io/github/actions/workflow/status/trillojs/trillo/codeql.yml?branch=main&style=flat-square&label=codeql"/></a>
+          <a target="Github" href="https://github.com/trillojs/trillo/actions/workflows/node.js.yml"><img alt="build" src="https://img.shields.io/github/actions/workflow/status/trillojs/trillo/node.js.yml?branch=main&style=flat-square"/></a>
+          <a target="Github" href="https://github.com/trillojs/trillo/actions/workflows/node.js.yml"><img alt="tests" src="https://img.shields.io/endpoint?style=flat-square&url=https://gist.githubusercontent.com/fcapolini/ee36283cfd3eb89ecdd1e5d23910682f/raw/trillo-junit-tests.json"/></a>
+          <a target="Github" href="https://github.com/trillojs/trillo/actions/workflows/node.js.yml"><img alt="coverage" src="https://img.shields.io/endpoint?style=flat-square&url=https%3A%2F%2Fgist.githubusercontent.com%2Ffcapolini%2Fee36283cfd3eb89ecdd1e5d23910682f%2Fraw%2Ftrillo-cobertura-coverage.json"/></a>
+        </div>
+    </app-hero>
 
       <div class="container">
         <div class="row">
