--- a/docroot/docs-parts/docs.htm
+++ b/docroot/docs-parts/docs.htm
@@ -6,6 +6,10 @@
     color: rgb(59, 69, 78);
   }
 
+  .app-body {
+    background-color: initial;
+  }
+
   .app-body.docs {
     padding-bottom: 0;
   }
@@ -25,7 +29,7 @@
   }
 
   .docs .app-pagination {
-    transform: translateY(1rem);
+    transform: translateY(.5rem);
     padding-top: 0rem;
     padding-bottom: 0rem;
     padding-left: 0;
@@ -138,7 +142,7 @@
   }
   .marked-js {
     /* color: rgb(59, 69, 78); */
-    margin-bottom: 3em;
+    margin-bottom: 2em;
   }
 
   @media (min-width: 400px) {
