--- a/docroot/parts/dark.htm
+++ b/docroot/parts/dark.htm
@@ -6,7 +6,8 @@
 :dark_leadFg="#fff"
 :dark_A="#f89d66"
 :dark_codeBg="#b5614c"
-:dark_cardBg="#2b2e37"
+:dark_cardBg1="#2b2e37"
+:dark_cardBg="#2a2a2a"
 :dark_cardFg="#eee"
 :dark_cardBd="#3f4f68"
 :dark_cardHeaderBg="#364050"
