--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -6,6 +6,7 @@
       background-color: #fff;
       color: #111;
       letter-spacing: .25px;
+      -webkit-font-smoothing: antialiased;
     }
     .app-body {
       background-color: #FBFCFD;
