--- a/docroot/docs-parts/docs.htm
+++ b/docroot/docs-parts/docs.htm
@@ -29,7 +29,7 @@
   }
 
   .docs .app-pagination {
-    transform: translateY(.5rem);
+    transform: translateY(1.5rem);
     padding-top: 0rem;
     padding-bottom: 0rem;
     padding-left: 0;
