--- a/docroot/docs-parts/docs.htm
+++ b/docroot/docs-parts/docs.htm
@@ -29,15 +29,16 @@
   }
 
   .docs .app-pagination {
-    transform: translateY(1.5rem);
+    transform: translateY(.25rem);
     padding-top: 0rem;
     padding-bottom: 0rem;
     padding-left: 0;
     padding-right: 0;
     margin-bottom: -1rem;
   }
-  @media only screen and (min-width: 576px) {
+  @media only screen and (min-width: 768px) {
     .docs .app-pagination {
+      transform: translateY(1.5rem);
       margin-bottom: -.5rem;
     }
   }
