--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -8,7 +8,8 @@
     <!--- <meta name="theme-color" content="[[page_headerBg]]"/> -->
     <meta name="color-scheme" content="light dark">
     <title>[[title]]</title>
-    <link rel="icon" href="/favicon.svg">
+    <link rel="icon" type="svg" href="/favicon.svg">
+    <link rel="icon" type="png" href="/favicon.png">
     <link rel="apple-touch-icon" href="/assets/trillo-semi.png"/>
 
     <!-- Google tag (gtag.js) -->
