--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -159,8 +159,8 @@
     </div>
 
     <app-footer>
-      &copy; [[new Date().getYear() + 1900]] trillojs.dev
-      <a href="https://github.com/trillojs/trillo/blob/main/LICENSE" target="Github" style="float: right">MIT Licence</a>
+      &copy; [[new Date().getYear() + 1900]] <a target="GitHub" href="https://github.com/trillojs">trillojs</a>
+      <a href="https://github.com/trillojs/trillo/blob/main/LICENSE" target="GitHub" style="float: right">MIT Licence</a>
     </app-footer>
     <script src="/res/bootstrap-5.3.1/bootstrap.bundle.min.js"></script>
   </body>
