--- a/docroot/index.html
+++ b/docroot/index.html
@@ -50,7 +50,7 @@
       <li :slot="left" class="nav-item">
         <a class="nav-link" href="/docs/concepts/overview">Docs</a>
       </li>
-      <a :slot="right" href="https://github.com/trillojs/trillo" target="Github" aria-label="Github Repository">
+      <a :slot="right" href="https://github.com/trillojs/trillo" target="GitHub" aria-label="Github Repository">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
           <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
         </svg>
@@ -75,10 +75,10 @@
           </code>
         </div>
         <div class="badges">
-          <a target="Github" href="https://github.com/trillojs/trillo/releases"><img alt="version" src="https://img.shields.io/github/package-json/v/trillojs/trillo?style=flat-square"/></a>
-          <a target="Github" href="https://github.com/trillojs/trillo/blob/main/LICENSE"><img alt="license" src="https://img.shields.io/github/license/trillojs/trillo?style=flat-square"/></a>
-          <a target="Github" href="https://github.com/trillojs/trillo/actions/workflows/codeql.yml"><img alt="codeql" src="https://img.shields.io/github/actions/workflow/status/trillojs/trillo/codeql.yml?branch=main&style=flat-square&label=codeql"/></a>
-          <a target="Github" href="https://github.com/trillojs/trillo/actions/workflows/node.js.yml"><img alt="build" src="https://img.shields.io/github/actions/workflow/status/trillojs/trillo/node.js.yml?branch=main&style=flat-square"/></a>
+          <a target="GitHub" href="https://github.com/trillojs/trillo/releases"><img alt="version" src="https://img.shields.io/github/package-json/v/trillojs/trillo?style=flat-square"/></a>
+          <a target="GitHub" href="https://github.com/trillojs/trillo/blob/main/LICENSE"><img alt="license" src="https://img.shields.io/github/license/trillojs/trillo?style=flat-square"/></a>
+          <a target="GitHub" href="https://github.com/trillojs/trillo/actions/workflows/codeql.yml"><img alt="codeql" src="https://img.shields.io/github/actions/workflow/status/trillojs/trillo/codeql.yml?branch=main&style=flat-square&label=codeql"/></a>
+          <a target="GitHub" href="https://github.com/trillojs/trillo/actions/workflows/node.js.yml"><img alt="build" src="https://img.shields.io/github/actions/workflow/status/trillojs/trillo/node.js.yml?branch=main&style=flat-square"/></a>
           <img alt="tests" src="https://img.shields.io/endpoint?style=flat-square&url=https://gist.githubusercontent.com/fcapolini/ee36283cfd3eb89ecdd1e5d23910682f/raw/trillo-junit-tests.json"/>
           <img alt="coverage" src="https://img.shields.io/endpoint?style=flat-square&url=https%3A%2F%2Fgist.githubusercontent.com%2Ffcapolini%2Fee36283cfd3eb89ecdd1e5d23910682f%2Fraw%2Ftrillo-cobertura-coverage.json"/>
         </div>
@@ -272,8 +272,8 @@
     </div>
 
     <app-footer>
-      &copy; [[new Date().getYear() + 1900]] trillojs.dev
-      <a href="https://github.com/trillojs/trillo/blob/main/LICENSE" target="Github" style="float: right">MIT Licence</a>
+      &copy; [[new Date().getYear() + 1900]] <a target="GitHub" href="https://github.com/trillojs">trillojs</a>
+      <a href="https://github.com/trillojs/trillo/blob/main/LICENSE" target="GitHub" style="float: right">MIT Licence</a>
     </app-footer>
     <!--- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> -->
     <script src="/res/bootstrap-5.3.1/bootstrap.bundle.min.js"></script>
